--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "proxy": "https://csv-data-formatter.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
